# Proyecto1-Paralela

./: .gitignore  CMakeLists.txt  Complex.cpp  Complex.h  MandelbrotScreenSaver.cpp  MandelbrotScreenSaver.h  README.md  main.cpp  parallel_01.cpp  parallel_02.cpp  results_par_SIMD.csv  results_par_SIMD_10cores_O3.csv  results_par_SIMD_4cores.csv  results_par_SIMD_8cores.csv  results_par_for_10cores.csv  results_par_for_auto_10cores.csv  results_par_for_auto_10cores_O3.csv  results_par_for_auto_4cores.csv  results_par_for_auto_8cores.csv  results_par_for_dynamic128_10cores.csv  results_par_for_dynamic1_10cores.csv  results_par_for_dynamic64_10cores.csv  results_par_for_static128_10cores.csv  results_par_for_static1_10cores.csv  results_par_for_static64_10cores.csv  results_par_func.csv  results_par_func_10cores_O3.csv  results_par_func_4cores.csv  results_par_func_8cores.csv  results_seq.csv
MandelbrotScreenSaver/: CMakeLists.txt  CMakePresets.json
MandelbrotScreenSaver/MandelbrotScreenSaver/: CMakeLists.txt  MandelbrotScreenSaver.cpp  MandelbrotScreenSaver.h  MandelbrotScreenSaver_par_for.cpp  MandelbrotScreenSaver_par_func.cpp  MandelbrotScreenSaver_par_func_SIMD.cpp
